--- a/LibraryApp/Assets/Styles/GlobalStyle.xaml
+++ b/LibraryApp/Assets/Styles/GlobalStyle.xaml
@@ -8,6 +8,16 @@
                 Value="15"/>
         <Setter Property="BorderBrush"
                 Value="#C0C0C0"/>
+        <Setter Property="HorizontalAlignment"
+                Value="Center"/>
+        <Setter Property="VerticalAlignment"
+                Value="Center"/>
+        <Setter Property="Width"
+                Value="250"/>
+        <Setter Property="FontSize"
+                Value="18"/>
+        <Setter Property="Height"
+                Value="40"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
