--- a/LibraryApp/View/Pages/LoginPage.xaml
+++ b/LibraryApp/View/Pages/LoginPage.xaml
@@ -14,7 +14,7 @@
                 <EventTrigger RoutedEvent="FrameworkElement.Loaded">
                     <BeginStoryboard>
                         <Storyboard Storyboard.TargetProperty="Margin"
-                                    SpeedRatio="10">
+                                    SpeedRatio="2">
                             <ThicknessAnimation>
                                 <ThicknessAnimation.From>
                                     <Thickness Left="0"
@@ -106,19 +106,10 @@
             </Grid.RowDefinitions>
             <Button Height="40"
                     Name="authButton"
-                    HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    Content="Авторизоваться"
-                    FontSize="18"
-                    Width="250" />
+                    Content="Авторизоваться"/>
             <Button Grid.Row="1"
                     Name="registrButton"
-                    HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    Content="Зарегистрироваться"
-                    FontSize="18"
-                    Height="40"
-                    Width="250" />
+                    Content="Зарегистрироваться"/>
             <TextBlock Grid.Row="2"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
